crates/gelx_cli/tests/snapshots/cli__cwd.snap
---
source: crates/gelx_cli/tests/cli.rs
info:
  program: gelx
  args:
    - generate
    - "--cwd"
    - "../../examples/gelx_example"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
