crates/gelx_cli/tests/snapshots/cli__generate_files.snap
---
source: crates/gelx_cli/tests/cli.rs
info:
  program: gelx
  args:
    - generate
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
