crates/gelx_cli/tests/snapshots/cli__invalid_cwd.snap
---
source: crates/gelx_cli/tests/cli.rs
info:
  program: gelx
  args:
    - generate
    - "--cwd"
    - "../../examples/gelx_example/does/not/exist"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
